--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,33 +4,34 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".LoginActivity"
     android:layout_marginLeft="15dp"
     android:layout_marginRight="15dp"
-    android:layout_marginBottom="20dp">
+    android:layout_marginBottom="20dp"
+    android:orientation="vertical"
+    tools:context=".LoginActivity">
 
     <ImageView
         android:layout_width="230dp"
         android:layout_height="250dp"
-        android:src="@drawable/logo"
         android:layout_gravity="center"
-        android:layout_marginTop="30dp"/>
+        android:layout_marginTop="30dp"
+        android:src="@drawable/logo" />
 
     <EditText
         android:id="@+id/edtUser"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
         android:backgroundTint="@color/edtUser"
-        android:hint="@string/user"
-        android:layout_marginBottom="20dp"/>
+        android:hint="@string/user" />
 
     <EditText
         android:id="@+id/edtPass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/edtPass"
-        android:hint="@string/password" />
+        android:hint="@string/password"
+        android:inputType="textPassword" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -43,14 +44,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:buttonTint="@color/check"
-            android:text="Nhớ"
+            android:text="@string/tvRemember"
             tools:ignore="MissingConstraints" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="17dp"
             android:layout_marginEnd="8dp"
-            android:text="Quên mật khẩu ?"
+            android:text="@string/tvForgetPass"
             android:textColor="@color/QuenPass"
             app:layout_constraintEnd_toEndOf="parent"
             tools:ignore="MissingConstraints"
@@ -62,13 +63,13 @@
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="110dp"
         android:layout_height="40dp"
+        android:layout_gravity="center"
         android:background="@color/btnlogin"
         android:elevation="7dp"
+        android:onClick="Login"
         android:text="@string/btnLogin"
         android:textAllCaps="false"
         android:textColor="@color/btnloginText"
-        android:textStyle="bold"
-        android:onClick="Login"
-        android:layout_gravity="center"/>
+        android:textStyle="bold" />
 
 </LinearLayout>
