--- a/app/src/main/res/layout/item_bread.xml
+++ b/app/src/main/res/layout/item_bread.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="110dp"
-    android:layout_height="180dp"
+    android:layout_width="111dp"
+    android:layout_height="160dp"
     xmlns:cardview="http://schemas.android.com/apk/res-auto"
     android:layout_margin="5dp"
     cardview:cardCornerRadius="4dp">
@@ -12,17 +12,17 @@
         android:orientation="vertical">
         
         <ImageView
-            android:id="@+id/imgbread"
+            android:id="@+id/imgBread"
             android:layout_width="match_parent"
-            android:layout_height="160dp"
+            android:layout_height="140dp"
             android:scaleType="centerCrop"
             android:src="@drawable/bread"/>
 
         <TextView
-            android:id="@+id/tvbread"
+            android:id="@+id/tvBread"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Trà sữa"
+            android:text="Bánh Mỳ"
             android:gravity="center"
             android:textColor="#510000"/>
 
