--- a/app/src/main/res/menu/main2.xml
+++ b/app/src/main/res/menu/main2.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_list"
         android:orderInCategory="100"
-        android:title="@string/action_add_product"
+        android:title="@string/action_list"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_logout"
+        android:orderInCategory="100"
+        android:title="@string/action_logout"
         app:showAsAction="never" />
 
     <item android:id="@+id/search"
