--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -128,6 +128,7 @@
             android:layout_below="@+id/tvPrice"
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@+id/tvPrice1"
+            android:inputType="number"
             android:backgroundTint="@color/edtsoluong" />
 
         <TextView
@@ -136,6 +137,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/tvPrice1"
             android:layout_marginTop="20dp"
+            android:inputType="number"
             android:text="@string/tvPrice2"
             android:textColor="#000000" />
 
