--- a/app/src/main/res/layout/item_fruit.xml
+++ b/app/src/main/res/layout/item_fruit.xml
@@ -4,6 +4,7 @@
     android:layout_height="160dp"
     xmlns:cardview="http://schemas.android.com/apk/res-auto"
     android:layout_margin="5dp"
+    android:id="@+id/card_Fruit"
     cardview:cardCornerRadius="4dp">
 
     <LinearLayout
