--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,6 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
         android:backgroundTint="@color/edtUser"
+        android:text="admin"
         android:hint="@string/user" />
 
     <EditText
@@ -31,6 +32,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/edtPass"
         android:hint="@string/password"
+        android:text="12345678"
         android:inputType="textPassword" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
