--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
     android:layout_marginRight="15dp"
     android:layout_marginBottom="20dp"
     android:orientation="vertical"
-    tools:context=".LoginActivity">
+    tools:context=".view.activity.LoginActivity">
 
     <ImageView
         android:layout_width="230dp"
@@ -68,7 +68,6 @@
         android:layout_gravity="center"
         android:background="@color/btnlogin"
         android:elevation="7dp"
-        android:onClick="Login"
         android:text="@string/btnLogin"
         android:textAllCaps="false"
         android:textColor="@color/btnloginText"
