--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".MilkTeaProductDetailActivity"
+    tools:context=".Namnn.MilkTeaProductDetailActivity"
     android:layout_margin="10dp">
 
     <ImageView
