--- a/app/src/main/res/layout/item_milk_tea.xml
+++ b/app/src/main/res/layout/item_milk_tea.xml
@@ -5,7 +5,7 @@
     xmlns:cardview="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_margin="5dp"
-    tools:context=".MenuActivity"
+    tools:context=".view.activity.MenuActivity"
     cardview:cardCornerRadius="4dp"
     android:id="@+id/cardMilk">
 
