--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,10 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="15dp"
-    android:layout_marginRight="15dp"
-    android:layout_marginBottom="20dp"
     android:orientation="vertical"
+    android:padding="@dimen/_10sdp"
+    android:background="@android:color/white"
     tools:context=".view.activity.LoginActivity">
 
     <ImageView
