--- a/app/src/main/res/layout/fragment_milk_tea.xml
+++ b/app/src/main/res/layout/fragment_milk_tea.xml
@@ -11,14 +11,14 @@
             android:layout_height="match_parent">
         </androidx.recyclerview.widget.RecyclerView>
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:layout_width="wrap_content"
-            android:id="@+id/fb_add1"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_margin="18dp"
-            android:src="@drawable/ic_add_black_24dp"
-            tools:ignore="VectorDrawableCompat" />
+<!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:id="@+id/fb_add1"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_alignParentBottom="true"-->
+<!--            android:layout_alignParentRight="true"-->
+<!--            android:layout_margin="18dp"-->
+<!--            android:src="@drawable/ic_add_black_24dp"-->
+<!--            tools:ignore="VectorDrawableCompat" />-->
 
 </RelativeLayout>
