--- a/app/src/main/res/layout/item_milk_tea.xml
+++ b/app/src/main/res/layout/item_milk_tea.xml
@@ -1,33 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="111dp"
-    android:layout_height="160dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     xmlns:cardview="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_margin="5dp"
     tools:context=".view.activity.MenuActivity"
-    cardview:cardCornerRadius="4dp"
+    android:padding="@dimen/_3sdp"
+    cardview:cardCornerRadius="@dimen/_3sdp"
+    android:layout_marginBottom="@dimen/_3sdp"
     android:id="@+id/cardMilk">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:padding="@dimen/_6sdp"
+        android:orientation="horizontal">
         
-        <ImageView
-            android:id="@+id/imgMilk"
-            android:layout_width="match_parent"
-            android:layout_height="140dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/milktea" />
+        <androidx.cardview.widget.CardView
+            android:layout_width="@dimen/_50sdp"
+            android:layout_height="@dimen/_50sdp"
+            android:layout_gravity="center"
+            cardview:cardCornerRadius="@dimen/_5sdp">
 
-        <TextView
-            android:id="@+id/tvMilk"
+            <ImageView
+                android:id="@+id/imgMilk"
+                android:layout_width="@dimen/_50sdp"
+                android:layout_height="@dimen/_50sdp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/milktea" />
+
+        </androidx.cardview.widget.CardView>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Trà sữa"
-            android:gravity="center"
-            android:textColor="#510000" />
+            android:layout_marginLeft="@dimen/_10sdp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tvMilk"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/_12sdp"
+                android:textStyle="bold"
+                android:textColor="@android:color/black" />
+
+            <TextView
+                android:layout_marginTop="@dimen/_2sdp"
+                android:id="@+id/tv_price"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/_10sdp"
+                android:textColor="@android:color/black"/>
+        </LinearLayout>
 
     </LinearLayout>
 
