--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,4 +22,5 @@
     <color name="tvBill">#000000</color>
     <color name="tvPrice">#ff0000</color>
     <color name="background">#ECECEC</color>
+    <color name="bg_pay">#1B72C6</color>
 </resources>
