--- a/app/src/main/res/layout/item_bill.xml
+++ b/app/src/main/res/layout/item_bill.xml
@@ -34,8 +34,9 @@
                 tools:ignore="MissingConstraints" />
 
             <View
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_width="0dp"
+                android:layout_weight="1.2"
+                android:layout_height="1dp"/>
 
             <ImageView
                 app:srcCompat="@drawable/ic_more_horiz_black_24dp"
@@ -71,6 +72,7 @@
                 android:layout_height="wrap_content"/>
 
             <TextView
+                android:layout_marginRight="@dimen/_5sdp"
                 android:id="@+id/tv_amount"
                 android:text="1"
                 android:textColor="@android:color/black"
