--- a/app/src/main/res/layout/list_bill_activity.xml
+++ b/app/src/main/res/layout/list_bill_activity.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Namnn.ListBillActivity">
+    tools:context=".view.activity.BillActivity$ListBillActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
