--- a/app/src/main/res/layout/fragment_use_table.xml
+++ b/app/src/main/res/layout/fragment_use_table.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/_5sdp"
     android:background="@color/background"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".view.fragment.UseTableFragment">
@@ -16,6 +15,7 @@
         <androidx.cardview.widget.CardView
             android:id="@+id/cv_buyon"
             android:layout_width="match_parent"
+            android:layout_margin="@dimen/_5sdp"
             android:layout_height="@dimen/_70sdp"
             android:background="@android:color/background_light"
             app:cardCornerRadius="@dimen/_5sdp">
