--- a/app/src/main/res/layout/fragment_empty_table.xml
+++ b/app/src/main/res/layout/fragment_empty_table.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
-    android:padding="@dimen/_5sdp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".view.fragment.EmptyTableFragment">
 
@@ -17,6 +16,7 @@
             android:id="@+id/cv_buyon"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_70sdp"
+            android:layout_margin="@dimen/_5sdp"
             android:background="@android:color/background_light"
             app:cardCornerRadius="@dimen/_5sdp">
 
