--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -1,14 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="@dimen/_12sdp"
+    android:orientation="vertical"
     tools:context=".view.fragment.UserFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <ImageView
+        android:id="@+id/img_avatar"
+        android:src="@drawable/ic_account"
+        android:layout_gravity="center_horizontal"
+        android:layout_width="@dimen/_100sdp"
+        android:layout_marginTop="@dimen/_12sdp"
+        android:layout_height="@dimen/_100sdp"/>
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/tv_name_account"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_5sdp"
+        android:gravity="center"
+        android:textSize="@dimen/_13sdp"
+        android:textColor="@android:color/black"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_marginRight="@dimen/_6sdp"
+        android:layout_marginLeft="@dimen/_6sdp"
+        android:background="@color/colorPrimary"
+        android:layout_marginTop="@dimen/_30sdp"/>
+
+    <LinearLayout
+        android:id="@+id/ll_chPassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/_6sdp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:src="@drawable/ic_key1"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="@dimen/_25sdp"/>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="9"
+            android:gravity="center_vertical"
+            android:text="@string/key_reset_password"
+            android:textSize="@dimen/_14sdp"
+            android:textColor="@android:color/black"/>
+
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.6dp"
+        android:background="@color/colorPrimary"
+        android:layout_marginLeft="@dimen/_6sdp"
+        android:layout_marginRight="@dimen/_6sdp"
+        android:layout_marginTop="@dimen/_6sdp"/>
+
+    <LinearLayout
+        android:id="@+id/ll_logout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/_6sdp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:src="@drawable/ic_logout1"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="@dimen/_25sdp"/>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="9"
+            android:gravity="center_vertical"
+            android:text="@string/key_logout"
+            android:textSize="@dimen/_14sdp"
+            android:textColor="@android:color/black"/>
+
+    </LinearLayout>
+
+
+</LinearLayout>
