--- a/app/src/main/res/layout/activity_bill.xml
+++ b/app/src/main/res/layout/activity_bill.xml
@@ -72,7 +72,7 @@
 
             <TextView
                 android:id="@+id/tv_Pay"
-                android:textAllCaps="true"
+                android:textAllCaps="false"
                 android:textStyle="bold"
                 android:textColor="@android:color/white"
                 android:layout_gravity="center"
@@ -85,6 +85,7 @@
                 android:layout_height="match_parent"/>
 
             <TextView
+                android:visibility="gone"
                 android:id="@+id/tv_Noti"
                 android:textAllCaps="true"
                 android:textStyle="bold"
