--- a/app/src/main/res/layout/activity_list_product.xml
+++ b/app/src/main/res/layout/activity_list_product.xml
@@ -24,91 +24,92 @@
             android:id="@+id/vp_product"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="@dimen/_30sdp"/>
+            android:layout_marginBottom="@dimen/_30sdp" />
 
         <LinearLayout
-            android:layout_alignParentBottom="true"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_30sdp"
-            android:padding="@dimen/_5sdp"
-            android:orientation="horizontal"
+            android:layout_alignParentBottom="true"
+            android:background="@color/colorPrimary"
             android:gravity="center_vertical"
-            android:background="@color/colorPrimary">
+            android:orientation="horizontal"
+            android:padding="@dimen/_5sdp">
 
             <LinearLayout
                 android:id="@+id/ll_reChoose"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:gravity="left|center_vertical"
                 android:orientation="horizontal">
 
                 <ImageView
-                    app:srcCompat="@drawable/ic_refresh_white_24dp"
                     android:layout_width="@dimen/_20sdp"
-                    android:layout_height="@dimen/_20sdp"/>
+                    android:layout_height="@dimen/_20sdp"
+                    app:srcCompat="@drawable/ic_refresh_white_24dp" />
 
                 <TextView
-                    android:textColor="@android:color/white"
-                    android:textStyle="bold"
-                    android:text="@string/key_Reselect"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:text="@string/key_Reselect"
+                    android:textColor="@android:color/white"
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
             <View
                 android:layout_width="0dp"
-                android:layout_weight="0.5"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5" />
 
             <LinearLayout
                 android:id="@+id/ll_finish"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:gravity="right|center_vertical"
                 tools:ignore="RtlHardcoded">
 
                 <ImageView
                     android:layout_width="@dimen/_20sdp"
                     android:layout_height="@dimen/_20sdp"
-                    app:srcCompat="@drawable/ic_assignment_turned_in_white_24dp"/>
+                    app:srcCompat="@drawable/ic_assignment_turned_in_white_24dp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/key_xong"
-                    android:textStyle="bold"
-                    android:textColor="@android:color/white"/>
+                    android:textColor="@android:color/white"
+                    android:textStyle="bold" />
 
                 <TextView
-                    android:layout_marginLeft="@dimen/_2sdp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@android:color/white"
+                    android:layout_marginLeft="@dimen/_2sdp"
                     android:text="("
-                    android:textStyle="bold"/>
+                    android:textColor="@android:color/white"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/tv_Amount"
-                    android:text="0"
-                    android:textStyle="bold"
-                    android:textColor="@android:color/white"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:text="0"
+                    android:textColor="@android:color/white"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@android:color/white"
                     android:text=")"
-                    android:textStyle="bold"/>
+                    android:textColor="@android:color/white"
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
         </LinearLayout>
 
     </RelativeLayout>
+
 
 </LinearLayout>
