--- a/app/src/main/res/layout/base.xml
+++ b/app/src/main/res/layout/base.xml
@@ -1,65 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clickable="true"
-    android:background="@color/colorPrimary"
     android:orientation="vertical">
 
-    <RelativeLayout
-        android:id="@+id/nav_bar"
+    <FrameLayout
+        android:id="@+id/nav_container1"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:gravity="center">
-
+        android:layout_height="match_parent"
+        android:background="#00000000">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:orientation="horizontal"
-            android:gravity="center">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <ImageButton
-                android:adjustViewBounds="true"
-                android:id="@+id/nav_left_button"
-                android:scaleType="fitCenter"
-                android:layout_width="40dp"
-                android:layout_height="match_parent" />
+            <RelativeLayout
+                android:id="@+id/nav_bar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="@color/colorPrimary"
+                android:gravity="center">
 
-            <TextView
-                android:id="@+id/nav_title"
-                android:layout_width="wrap_content"
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="45dp"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <ImageButton
+                        android:id="@+id/nav_left_button"
+                        android:layout_width="40dp"
+                        android:layout_height="match_parent"
+                        android:adjustViewBounds="true"
+                        android:scaleType="fitCenter" />
+
+                    <TextView
+                        android:id="@+id/nav_title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_alignParentRight="true"
+                        android:layout_weight="1"
+                        android:gravity="center_vertical"
+                        android:paddingLeft="8dp"
+                        android:paddingRight="8dp"
+                        android:textAlignment="center"
+                        android:textColor="@android:color/white"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                    <ImageButton
+                        android:id="@+id/nav_right_button"
+                        android:layout_width="40dp"
+                        android:layout_height="match_parent"
+                        android:adjustViewBounds="true"
+                        android:scaleType="fitCenter" />
+
+
+                </LinearLayout>
+
+            </RelativeLayout>
+
+            <FrameLayout
+                android:id="@+id/nav_container"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_alignParentRight="true"
-                android:layout_weight="1"
-                android:gravity="center_vertical"
-                android:paddingLeft="8dp"
-                android:paddingRight="8dp"
-                android:textAlignment="center"
-                android:textColor="@android:color/white"
-                android:textSize="16sp"
-                android:textStyle="bold" />
-
-            <ImageButton
-                android:adjustViewBounds="true"
-                android:scaleType="fitCenter"
-                android:id="@+id/nav_right_button"
-                android:layout_width="40dp"
-                android:layout_height="match_parent" />
-
+                android:background="#00000000" />
 
         </LinearLayout>
 
-
-    </RelativeLayout>
-
-    <FrameLayout
-
-        android:id="@+id/nav_container"
-        android:layout_width="match_parent"
-        android:background="@android:color/transparent"
-        android:layout_height="match_parent" />
+    </FrameLayout>
 
 
 </LinearLayout>
