--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -54,10 +54,10 @@
     <Button
         android:id="@+id/btnLogin"
         style="?android:attr/borderlessButtonStyle"
-        android:layout_width="110dp"
-        android:layout_height="40dp"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
         android:layout_gravity="center"
-        android:background="@color/btnlogin"
+        android:background="@drawable/bg_buttom_login"
         android:elevation="7dp"
         android:text="@string/btnLogin"
         android:textAllCaps="false"
