--- a/app/src/main/res/layout/activity_bill.xml
+++ b/app/src/main/res/layout/activity_bill.xml
@@ -79,7 +79,7 @@
                 android:textSize="@dimen/_13sdp"
                 android:background="@color/bg_pay"
                 android:gravity="center"
-                android:text="@string/key_Pay"
+                android:text="@string/key_Order"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="match_parent"/>
