--- a/app/src/main/res/layout/item_bill.xml
+++ b/app/src/main/res/layout/item_bill.xml
@@ -39,7 +39,7 @@
                 android:layout_height="1dp"/>
 
             <ImageView
-                app:srcCompat="@drawable/ic_more_horiz_black_24dp"
+                app:srcCompat="@drawable/ic_close_black_24dp"
                 android:layout_gravity="right"
                 android:layout_width="@dimen/_30sdp"
                 android:layout_height="wrap_content"/>
@@ -71,20 +71,38 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
-            <TextView
-                android:layout_marginRight="@dimen/_5sdp"
-                android:id="@+id/tv_amount"
-                android:text="1"
-                android:textColor="@android:color/black"
-                android:gravity="right"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="@dimen/_12sdp"/>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:gravity="right">
+
+                <ImageView
+                    android:id="@+id/img_remove"
+                    android:layout_marginRight="@dimen/_5sdp"
+                    app:srcCompat="@drawable/ic_remove_green_24dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+                <TextView
+                    android:id="@+id/tv_amount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/_12sdp"
+                    android:textColor="@android:color/black"
+                    android:text="1"
+                    android:layout_marginRight="@dimen/_5sdp"/>
+
+                <ImageView
+                    android:id="@+id/img_add"
+                    app:srcCompat="@drawable/ic_add_green_24dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+            </LinearLayout>
         </LinearLayout>
 
     </LinearLayout>
-
-
-
-
 </LinearLayout>
