--- a/app/src/main/res/layout/item_bill.xml
+++ b/app/src/main/res/layout/item_bill.xml
@@ -39,7 +39,8 @@
                 android:layout_height="1dp"/>
 
             <ImageView
-                app:srcCompat="@drawable/ic_close_black_24dp"
+                android:id="@+id/img_delete"
+                app:srcCompat="@drawable/ic_clear_red_24dp"
                 android:layout_gravity="right"
                 android:layout_width="@dimen/_30sdp"
                 android:layout_height="wrap_content"/>
